--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,7 @@
     <string name="percentage">Percentage</string>
     <string name="me">Me</string>
     <string name="you">You</string>
+    <string name="title">Title</string>
+    <string name="description">Description</string>
+    <string name="get_started">Get Started</string>
 </resources>
