--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,4 +14,5 @@
     <string name="title">Title</string>
     <string name="description">Description</string>
     <string name="get_started">Get Started</string>
+    <string name="history">History</string>
 </resources>
